src/admin/app.scss
@use "sass:color";

$revpressGreen: rgb(0, 158, 18);

#revpress {
    box-sizing: border-box;
    padding: 10px;
    background-color: white;
    margin: 0 auto;
    max-width: 1600px;

    header {
        box-sizing: border-box;
        padding: 0 1rem;
    }

    nav {
        box-sizing: border-box;
        padding: 0 1em;
        margin: 1em 0 0;
        border-bottom: 4px solid #EFEFEF;
        font-size: 1rem;

        ol {
            display: flex;
            flex-direction: row;
            column-gap: 1rem;
            margin: 0;
            list-style: none;

            li {
                margin: 0;

                button {
                    border: 0;
                    background: none;
                    display: block;
                    margin: 0 0 -5px 0;
                    padding: 0;
                    padding: 0 1rem 1rem;
                    margin-bottom: -4px;
                    font-size: 1.5em;
                    border-bottom: 4px solid transparent;
                    color: #888888;

                    &.active {
                        border-bottom: 4px solid $revpressGreen;
                        color: $revpressGreen;

                        &:hover {
                            color: $revpressGreen;
                        }
                    }

                    &:hover {
                        cursor: pointer;
                        color: #666666;
                    }
                }
            }
        }
    }

    .content {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        max-width: 1400px;
        margin: 0 auto;
        gap: 16px;
        font-size: 1rem;

        >:first-child {
            flex: 1 1 auto;
        }

        .settings {
            .field {
                >label {
                    display: block;
                    font-size: 1.2em;
                }

                p.description {
                    color: #666666;
                    font-size: 1em;
                }
            }
        }

        .sidebar {
            flex: 0 1 350px;
            background-color: $revpressGreen;
        }
    }
}

// SnippetEditor component styles.
.revpress.snippet-editor {

    // Styles the code editor.
    .CodeMirror {
        border: 1px solid #DDDDDD;
    }
}

// Settings component styles.
.revpress.settings {
    >section {
        padding: 20px 0;

        &:last-of-type {
            margin-bottom: 0;
        }

        >h2 {
            margin: 12px 0 16px;
        }
    }
}

// Sidebar component styles.
.revpress.sidebar {
    margin: 20px 0 0;
    background-color: $revpressGreen;
    font-size: 1rem;

    >div {
        box-sizing: border-box;
        padding: 10px;
        border-radius: 5px;
        margin: 16px;
        background-color: white;
        text-align: center;
    }

    .identity {
        a {
            color: initial;
            text-decoration: none;
        }

        svg {
            width: 200px;
            height: auto;
        }

        p {
            box-sizing: border-box;
            margin: 0px;
            padding: 16px 0;
            color: $revpressGreen;
            font-size: 1.1em;
        }
    }

    h2 {
        margin: 16px 0;
        color: $revpressGreen;
        font-size: 1.5em;
        font-weight: bold;
    }

    p {
        margin: 8px 0;
        font-size: 1em;

        &.green {
            color: $revpressGreen;
        }

        a[href] {
            color: $revpressGreen;
            text-decoration: underline;
        }
    }

    .offer {
        text-align: left;

        ul {
            box-sizing: border-box;
            list-style: disc;
            padding: 0 0 0 20px;
        }
    }

    .join .components-button {
        --wp-admin-theme-color: #{$revpressGreen};
        --wp-admin-theme-color-darker-10: #{color.scale($revpressGreen, $lightness: -10%)};
        --wp-admin-theme-color-darker-20: #{color.scale($revpressGreen, $lightness: -20%)};
        font-size: 1em;

        .dashicon {
            margin-left: 8px;
        }
    }
}

// SnippetList component styles.
.revpress.snippet-list {
    list-style: none;
    margin: 0;
    padding: 0;

    li {
        display: flex;
        flex-direction: row;
        align-items: center;
        box-sizing: border-box;
        margin: 0;
        padding: 12px;
        border-width: 0;
        border-color: #DDDDDD;
        border-style: solid;
        border-left-width: 1px;
        border-right-width: 1px;
        border-bottom-width: 1px;
        border-collapse: collapse;
        width: 100%;

        &:first-of-type {
            border-top-width: 1px;
        }

        .identifier {
            flex: 0 0 15ch;
            font-size: 1.2em;
        }
    
        .constraints {
            flex: 1 1 auto;
    
            .constraint {
                display: flex;
                flex-direction: row;
                align-items: center;
                gap: 4px;
    
                .icon {
                    padding: 4px 0px 0px;
                }
    
                p {
                    margin: 0;
                    font-size: 1em;
                }
            }
        }

        .actions {
            flex: 0 0 auto;
            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 8px;

            button {
                padding: 6px 12px;
            }
        }
    }
}

